--- a/class-lib-with-static-resource-dict/Library.csproj
+++ b/class-lib-with-static-resource-dict/Library.csproj
@@ -5,7 +5,7 @@
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
-		<RootNamespace>class_lib_with_static_resource_dict</RootNamespace>
+		<RootNamespace>Library</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -28,6 +28,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="ButtonEx.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="GreenLabel.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
